--- a/iBeaconNavigation/res/layout/activity_destination_selector.xml
+++ b/iBeaconNavigation/res/layout/activity_destination_selector.xml
@@ -55,14 +55,6 @@
         android:text="Next Step:"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/currentLocation"
-        android:layout_below="@+id/directions"
-        android:src="@drawable/n" />
-
     <TextView
         android:id="@+id/directions"
         android:layout_width="match_parent"
@@ -70,5 +62,14 @@
         android:layout_alignLeft="@+id/directions_label"
         android:layout_below="@+id/directions_label"
         android:text=" " />
+
+    <view
+        android:id="@+id/compass"
+        android:layout_width="620px"
+        android:layout_height="620px"
+        android:layout_below="@+id/directions"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        class="uk.ac.aber.dcs.saw.mfc1.Compass" />
 
 </RelativeLayout>
